--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.7.1",
     "nodemon": "^3.0.3",
