--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.7.1",
+    "nodemon": "^3.0.3",
     "pm2": "^5.3.1",
     "uuid": "^9.0.1"
   }
