Environment variables update

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 JWT_SECRET = "2/19978d,8£!q5D`2$g#"
-DB_HOST = "localhost"
-DB_USER = "root"
-DB_PASSWORD = ""
+DB_HOST = "postgres://sammy:LPN8zRDCpeQ7Q6He2tblfS4Pj0YrrkDp@dpg-cn6spjtjm4es73bocer0-a.oregon-postgres.render.com/phonepartsstore"
+DB_USER = "sammy"
+DB_PASSWORD = "LPN8zRDCpeQ7Q6He2tblfS4Pj0YrrkDp"
 DB_NAME = "phonepartsstore"
 DB_PORT = 5432
 PORT = 3000
