Added root route

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 JWT_SECRET = 2/19978d,8£!q5D`2$g
-DB_HOST = "localhost"
+DB_HOST = "200.134.155.12"
 DB_USER = "root"
 DB_PASS = ""
 DB_NAME = "phonepartsstore"
