--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@ DB_HOST = "localhost"
 DB_USER = "root"
 DB_PASS = ""
 DB_NAME = "phonepartsstore"
+# The port is optional
 DB_PORT = 3306
 PORT = 3000
