--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "stop": "pm2 kill",
+    "start": "pm2 start app.js"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +21,8 @@
     "express-fileupload": "^1.4.3",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "mssql": "^10.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.9.1",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
     "pm2": "^5.3.1",
