Reverting to mysql

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 JWT_SECRET = 2/19978d,8£!q5D`2$g
-AZURE_SQL_SERVER = "phonepartsstore.database.windows.net"
-AZURE_SQL_DATABASE = "phonepartsstore"
-AZURE_SQL_PORT = 1433
-AZURE_SQL_USER = "sammyklane"
-AZURE_SQL_PASSWORD = "@Blackpanther123"
+MYSQL_HOST = "localhost"
+MYSQL_USER = "root"
+MYSQL_PASSWORD = ""
+MYSQL_DATABASE = "phonepartsstore"
+MYSQL_PORT = 3306,
 PORT = 3000
